// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h4>
     Viewing 
     
    expenses
     totalling 
    $2.35
     
  </h4>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h4>
     Viewing 
     
    expenses
     totalling 
    $235,123,409.87
     
  </h4>
</div>
`;
